personaliser les emails

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./certs:/opt/keycloak/test/certs
       - ./logs:/opt/keycloak/logs #recuperation du logs dans le containeur
-      - ./keycloak_themes:/opt/keycloak/themes
+      - ./keycloak_themes:/opt/keycloak/themes #implementation du themes
 
     restart: always
 
